Subject: Corrected casing inconsistency in secret naming
Body: This revision updates the environment variable 'SECRET_LICENSE' to match a change in the name of the secret it refers to, making it 'license' instead of 'LICENSE'. The revision addresses an issue where the secret name's case wasn't matching, causing the workflow to fail. Now, with the corrected casing, the workflow can continue without error.

--- a/.github/workflows/TOS.yml
+++ b/.github/workflows/TOS.yml
@@ -31,7 +31,7 @@ jobs:
         done
     - name: Compare License with Secret
       env:
-        SECRET_LICENSE: ${{ secrets.LICENSE }}
+        SECRET_LICENSE: ${{ secrets.license }}
       run: |
           #!/bin/bash
 
