--- a/.github/workflows/TOS.yml
+++ b/.github/workflows/TOS.yml
@@ -12,21 +12,17 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
-    - name: Check and Remove 'I Agree'
+    - name: Check and Discard 'I Agree'
       run: |
         #!/bin/bash
 
         for file in "${FILES_TO_CHECK[@]}"; do
-        # Check if the file ends with 'I agree'
-        if tail -n 1 "$file" | grep -Eq "I agree$"; then
-          echo "'I agree' found in $file, removing..."
-          # Remove only 'I agree' from the last line
-          sed -i '$ s/I agree$//' "$file"
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-          git commit -am "Auto-removed 'I agree' from $file"
-          git push
-        else
-          echo "'I agree' not found in $file"
-        fi
+          # Check if the file ends with 'I agree' (case insensitive)
+          if tail -n 1 "$file" | grep -Eiq "I agree$"; then
+            echo "'I agree' found in $file, discarding changes..."
+            # Reset the file to the last commit state
+            git checkout -- "$file"
+          else
+            echo "'I agree' not found in $file"
+          fi
         done
