--- a/.github/workflows/web-interface-tests.yml
+++ b/.github/workflows/web-interface-tests.yml
@@ -20,8 +20,8 @@ jobs:
 
     - name: Install dependencies
       run: npm install
-      working-directory: src/web
+      working-directory: src/web-interface
 
     - name: Run Cypress tests
       run: npm run test
-      working-directory: src/web
+      working-directory: src/web-interface
