--- a/.github/workflows/web-interface-tests.yml
+++ b/.github/workflows/web-interface-tests.yml
@@ -22,6 +22,10 @@ jobs:
       run: npm install
       working-directory: src/web-interface
 
+    - name: Install Cypress
+      run: npm install cypress --save-dev
+      working-directory: src/web-interface
+
     - name: Run Cypress tests
       run: npm run test
       working-directory: src/web-interface
