--- a/src/web-interface/package.json
+++ b/src/web-interface/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "cypress run",
