--- a/src/web-interface/package.json
+++ b/src/web-interface/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
     "vite": "^5.3.5"
   }
 }
